fix chevron position when collapsed

--- a/src/modules/market/components/market-header/market-header.styles.less
+++ b/src/modules/market/components/market-header/market-header.styles.less
@@ -7,14 +7,21 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  max-height: 1000px;
-  min-height: 300px;
+  max-height: 60rem;
+  min-height: 9rem;
   transition: max-height 100ms ease;
 }
 
 .MarketHeader__container__collapsed {
-  max-height: 100px;
-  min-height: 100px;
+  max-height: 6.25rem;
+  min-height: 4.5rem;
+  position: relative;
+}
+
+.MarketHeader__button__collapsed {
+  position: absolute;
+  top: 3.5rem;
+  width: 100%;
 }
 
 .MarketHeader__property__header {
